# hash-zig

./: .gitignore  CHANGELOG.md  FINAL_SESSION_SUMMARY.md  INVESTIGATION_SUMMARY.md  LICENSE  MEMORY_LEAK_FIX.md  PERFORMANCE_OPTIMIZATION_ANALYSIS.md  README.md  RUST_COMPATIBILITY.md  build.zig  build.zig.zon  check_rust_simd  context.md  debug_bottom_tree_generation.zig  debug_bottom_tree_step_by_step.zig  debug_chain_computation.zig  debug_chain_detailed.zig  debug_detailed.zig  debug_field_arithmetic.zig  debug_field_arithmetic_detailed.zig  debug_field_arithmetic_reference.zig  debug_internal_layer.zig  debug_internal_layer_complete.zig  debug_internal_layer_detailed.zig  debug_internal_layer_reference.zig  debug_mds_matrix.zig  debug_minimal.zig  debug_parameter_generation.zig  debug_poseidon2_trace.zig  debug_round_constants.zig  debug_rust_comparison_detailed.zig  debug_test.zig  debug_tree_building_detailed.zig  debug_tree_comparison.zig  debug_tree_correct.zig  debug_tree_detailed.zig  debug_tree_exact.zig  debug_v_operations.zig  verify_round_constants.zig  zig_compat_output.txt
.github/: RELEASE_PROCESS.md  RELEASE_SETUP.md
.github/workflows/: README.md  auto-release.yml  ci.yml  performance-benchmark.yml  release-branch.yml  release-on-master.yml  release-on-merge.yml  release-on-pr-merge.yml
analysis/: BOTTOM_TREE_COMPARISON.md  BOTTOM_TREE_GENERATION_ANALYSIS.md  COMPREHENSIVE_BOTTOM_TREE_COMPARISON.md  COMPREHENSIVE_TREE_COMPARISON.md  CRITICAL_DISCOVERY_PARALLEL_PROCESSING.md  DEBUGGING_SUMMARY.md  FINAL_INVESTIGATION_SUMMARY.md  FINAL_STATUS.md  GITHUB_ISSUE_TEMPLATE.md  INVESTIGATION_FINDINGS.md  INVESTIGATION_SUMMARY.md  PADDING_NODE_ANALYSIS.md  PARALLEL_PROCESSING_ANALYSIS.md  PARALLEL_PROCESSING_FIX.md  README.md  REMAINING_DIFFERENCES_ANALYSIS.md  RUST_COMPATIBILITY.md  RUST_VS_ZIG_FINAL_COMPARISON.md  RUST_VS_ZIG_TREE_COMPARISON.md  TRUNCATION_FIX.md  compare_bottom_tree_roots.md  rust_zig_compatibility_investigation.md  rust_zig_compatibility_summary.md  verification_strategy.md  zig_rust_implementation_comparison.md  zig_to_rust_deser_requirements.md  zig_to_rust_local_changes.md
benchmark/: .gitignore  COMPATIBILITY_TEST.md  Makefile  PERFORMANCE_TESTING.md  README.md  benchmark.py  inspect_pregenerated_keys.py  requirements.txt  test_leansig_to_hashzig.py
benchmark/p3-poseidon2-local/: Cargo.toml
benchmark/p3-poseidon2-local/src/: lib.rs
benchmark/pre-generated-keys/: README.md  validator_0_pk.ssz  validator_1_pk.ssz  validator_2_pk.ssz
benchmark/rust_benchmark/: Cargo.toml  rust-toolchain.toml
benchmark/rust_benchmark/debug/: target_sum_debug.rs
benchmark/rust_benchmark/src/: leaf_domain_debug.rs  main.rs  poseidon_debug.rs  remote_hashsig_tool.rs  sign_message.rs  sign_message_2_18.rs  sign_message_2_32.rs  test_internal.rs  verify_signature.rs  verify_signature_2_18.rs  verify_signature_2_32.rs
benchmark/zig_benchmark/: Makefile  build.zig  build.zig.zon
examples/: README.md  basic_usage.zig  basic_usage_native.zig  compare_implementations.zig  debug_compat.zig  debug_native_full.zig  optimized_benchmark.zig  profiling.zig  quick_compat_test.zig  rust_compat_test.zig  simd_benchmark.zig  simple_debug.zig  test_generalized_xmss_compat.zig  test_poseidon2_compatibility.zig  test_shake_prf_compatibility.zig  trace_keygen.zig  verify_p2_24.zig
investigations/: CRITICAL_FIXES_APPLIED.md  FINAL_ALGORITHM_ANALYSIS.md  FINAL_ANALYSIS.md  FINAL_TREE_TOPOLOGY_ANALYSIS.md  INVESTIGATION_STATUS.md  RUST_ALGORITHM_PORT_STATUS.md  RUST_VS_ZIG_TREE_BUILDING_ANALYSIS.md  analyze_processing_order.zig  bottom_tree_roots_comparison.zig  compare_bottom_tree_roots.zig  compare_rng_consumption.zig  compare_top_tree_building.zig  context_updated.md  deep_algorithm_analysis.zig  field_element_conversion_analysis.zig  hash_function_application_analysis.zig  hash_function_input_analysis.zig  processing_order_analysis.zig  processing_order_deep_analysis.zig  processing_order_focused_analysis.zig  rng_state_synchronization_analysis.zig  rust_algorithm_port.zig  sign_lifetime_2_18.zig  step_by_step_comparison.zig  test_lifetime_2_18.zig  to_be_testes.md  verify_lifetime_2_18.zig  verify_round_constants.zig
investigations/test/: comprehensive_rust_compatibility_test.zig  encoding_variants_test.zig  performance_benchmark_test.zig  performance_test.zig  rust_compatibility_test.zig
scripts/: benchmark.zig  benchmark_hash_function.zig  benchmark_keygen.zig  benchmark_lifetime_2_18.sh  benchmark_lifetime_2_32.sh  benchmark_lifetime_2_8.sh  benchmark_parallel.zig  benchmark_verify.zig  check_syntax.sh  compare_layer_sizes.zig  compare_poseidon_direct.zig  compare_poseidon_permutation.sh  compare_poseidon_results.sh  profile_keygen.zig  profile_keygen_detailed.zig  test_lifetimes.zig
src/: arena_allocator.zig  chacha12_rng.zig  encoding.zig  field.zig  main.zig  merkle.zig  merkle_native.zig  optimized_hash_v2.zig  optimized_poseidon2.zig  optimized_signature.zig  optimized_signature_v2.zig  optimized_winternitz.zig  optimized_winternitz_v2.zig  params.zig  poseidon2_hash.zig  prf.zig  root.zig  sha3.zig  signature.zig  signature_native.zig  signature_state.zig  simd_hash.zig  simd_signature.zig  simd_winternitz.zig  tweak.zig  tweakable_hash.zig  winternitz.zig  winternitz_native.zig
src/core/: field.zig  mod.zig  params.zig  params_rust_compat.zig
src/encoding/: encoding.zig  mod.zig
src/hash/: mod.zig  plonky3_field.zig  poseidon2_hash.zig  poseidon2_hash_legacy.zig  poseidon2_hash_simd.zig  poseidon2_plonky3_compat.zig  prf.zig  test_poseidon2_simd.zig  tweak.zig  tweakable_hash.zig
src/merkle/: field.zig  incremental_tree_builder.zig  merkle.zig  merkle_native.zig  mod.zig  params.zig  root.zig  streaming_tree_builder.zig
src/poseidon2/: README.md  field.zig  generic_poseidon2.zig  hash.zig  plonky3_field.zig  poseidon2.zig  root.zig  (+1 more)
test/: comprehensive_rust_compatibility_test.zig  encoding_variants_test.zig  integration_test.zig  performance_benchmark_test.zig  performance_test.zig  poseidon2_test.zig  rust_compatibility_test.zig
(+92 files in other folders)
