[package]
name = "rust_benchmark"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug-tools = []

[dependencies]
leansig = { path = "../leansig-local" }
p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3.git", rev = "a33a312" }
p3-poseidon2 = { path = "../p3-poseidon2-local" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git", rev = "a33a312" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git", rev = "a33a312" }

rand = { version = "0.9", features = ["std_rng"] }
rand_chacha = "0.9"
getrandom = "0.2"
sha3 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
bincode = "1.3"
num-bigint = "0.4"
num-traits = "0.2"

[patch."https://github.com/Plonky3/Plonky3.git"]
p3-poseidon2 = { path = "../p3-poseidon2-local" }

[[bin]]
name = "keygen_bench"
path = "src/main.rs"

[[bin]]
name = "test_internal"
path = "src/test_internal.rs"

[[bin]]
name = "sign_message"
path = "src/sign_message.rs"

[[bin]]
name = "verify_signature"
path = "src/verify_signature.rs"

[[bin]]
name = "sign_message_2_18"
path = "src/sign_message_2_18.rs"

[[bin]]
name = "verify_signature_2_18"
path = "src/verify_signature_2_18.rs"

[[bin]]
name = "verify_signature_2_32"
path = "src/verify_signature_2_32.rs"

[[bin]]
name = "sign_message_2_32"
path = "src/sign_message_2_32.rs"

[[bin]]
name = "remote_hashsig_tool"
path = "src/remote_hashsig_tool.rs"

[[bin]]
name = "compare_lifetime_2_8"
path = "src/bin/compare_lifetime_2_8.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_bottom_tree_detailed"
path = "src/bin/debug_bottom_tree_detailed.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_bottom_tree_generation"
path = "src/bin/debug_bottom_tree_generation.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_bottom_trees"
path = "src/bin/debug_bottom_trees.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_chain_computation"
path = "src/bin/debug_chain_computation.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_chain_detailed"
path = "src/bin/debug_chain_detailed.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_complete_public_key"
path = "src/bin/debug_complete_public_key.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_detailed_rng_flow"
path = "src/bin/debug_detailed_rng_flow.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_detailed_rng_tracking"
path = "src/bin/debug_detailed_rng_tracking.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_full_keygen_rng"
path = "src/bin/debug_full_keygen_rng.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_koalabear_random"
path = "src/bin/debug_koalabear_random.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_parameter_generation"
path = "src/bin/debug_parameter_generation.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_parameter_halving"
path = "src/bin/debug_parameter_halving.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_parameter_storage"
path = "src/bin/debug_parameter_storage.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_poseidon2_comprehensive"
path = "src/bin/debug_poseidon2_comprehensive.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_poseidon2_direct"
path = "src/bin/debug_poseidon2_direct.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_poseidon2_direct_comparison"
path = "src/bin/debug_poseidon2_direct_comparison.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_poseidon2_rust"
path = "src/bin/debug_poseidon2_rust.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_poseidon2_trace"
path = "src/bin/debug_poseidon2_trace.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_rng_array_vs_individual"
path = "src/bin/debug_rng_array_vs_individual.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_rng_comparison"
path = "src/bin/debug_rng_comparison.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_rng_consumption_detailed"
path = "src/bin/debug_rng_consumption_detailed.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_rng_consumption_order"
path = "src/bin/debug_rng_consumption_order.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_rng_consumption_tree"
path = "src/bin/debug_rng_consumption_tree.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_rng_flow"
path = "src/bin/debug_rng_flow.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_rng_flow_exact"
path = "src/bin/debug_rng_flow_exact.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_rng_tracking"
path = "src/bin/debug_rng_tracking.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_rng_tracking_detailed"
path = "src/bin/debug_rng_tracking_detailed.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_tree_building"
path = "src/bin/debug_tree_building.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_tree_building_step_by_step"
path = "src/bin/debug_tree_building_step_by_step.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_tree_construction_detailed"
path = "src/bin/debug_tree_construction_detailed.rs"
required-features = ["debug-tools"]

[[bin]]
name = "verify_round_constants"
path = "src/bin/verify_round_constants.rs"
required-features = ["debug-tools"]

[[bin]]
name = "poseidon_debug"
path = "src/poseidon_debug.rs"

[[bin]]
name = "debug_poseidon_step_by_step"
path = "src/bin/debug_poseidon_step_by_step.rs"
required-features = ["debug-tools"]

[[bin]]
name = "compare_poseidon_direct"
path = "src/bin/compare_poseidon_direct.rs"
required-features = ["debug-tools"]

[[bin]]
name = "cross_lang_rust_tool"
path = "src/bin/cross_lang_rust_tool.rs"

[[bin]]
name = "test_poseidon_direct"
path = "src/bin/test_poseidon_direct.rs"
required-features = ["debug-tools"]
