[package]
name = "rust_benchmark"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug-tools = []

[dependencies]
leansig = { git = "https://github.com/leanEthereum/leanSig.git", rev = "f10dcbefac2502d356d93f686e8b4ecd8dc8840a" }
p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3.git", rev = "a33a312" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git", rev = "a33a312" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git", rev = "a33a312" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git", rev = "a33a312" }

rand = { version = "0.9", features = ["std_rng"] }
rand_chacha = "0.9"
getrandom = "0.2"
sha3 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
bincode = "1.3"
num-bigint = "0.4"
num-traits = "0.2"
ssz = { package = "ethereum_ssz", version = "0.10" }

[[bin]]
name = "cross_lang_rust_tool"
path = "src/bin/cross_lang_rust_tool.rs"

[[bin]]
name = "remote_hashsig_tool"
path = "src/remote_hashsig_tool.rs"
required-features = ["debug-tools"]
